Adição do mapeamento de veículos para o Resource

--- a/ClientApp/src/app/vehicle-form/vehicle-form.component.html
+++ b/ClientApp/src/app/vehicle-form/vehicle-form.component.html
@@ -14,7 +14,7 @@
             <option *ngFor="let m of models" value="{{ m.id }}">{{m.name}}</option>
         </select>
     </div>
-    <p>Is this Vehicle Registered?</p>
+    <h4>Is this Vehicle Registered?</h4>
     <label for="registered" class="radio-inline">
         <input type="radio" name="isRegistered" id="registered" value="true">Yes
     </label>
